--- a/Client/src/css/app.css
+++ b/Client/src/css/app.css
@@ -4,6 +4,7 @@ html, body {
   margin: 0;
   padding: 0;
   overflow: visible !important;
+  overflow-x: hidden;
   height: auto !important;
 }
 
@@ -27,10 +28,36 @@ footer {
   margin: 0;
   padding: 0;
 }
-/* section, div, main {
+section, div, main {
   overflow: visible !important;
-} */
+  overflow-x: hidden !important;
+}
 .dropdown{
   overflow: visible !important;
 }
 
+/* Apply to entire document */
+* {
+  scrollbar-width: thin;          
+  scrollbar-color: #888 transparent;
+}
+
+/* Chrome, Edge, Safari */
+*::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
+}
+
+*::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #888;
+  border-radius: 4px;
+  border: none;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
+}
